# swagger.yaml
@@ -27,12 +27,12 @@ paths:
       description: Register a new user
       operationId: CreateUser
       requestBody:
-        $ref: '#/components/requestBodies/NewUserRequest'
+        $ref: "#/components/requestBodies/NewUserRequest"
       responses:
-        '201':
-          $ref: '#/components/responses/UserResponse'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "201":
+          $ref: "#/components/responses/UserResponse"
+        "422":
+          $ref: "#/components/responses/GenericError"
       x-codegen-request-body-name: body
   /user:
     get:
@@ -42,12 +42,12 @@ paths:
       description: Gets the currently logged-in user
       operationId: GetCurrentUser
       responses:
-        '200':
-          $ref: '#/components/responses/UserResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/UserResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
     put:
@@ -57,14 +57,14 @@ paths:
       description: Updated user information for current user
       operationId: UpdateCurrentUser
       requestBody:
-        $ref: '#/components/requestBodies/UpdateUserRequest'
+        $ref: "#/components/requestBodies/UpdateUserRequest"
       responses:
-        '200':
-          $ref: '#/components/responses/UserResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/UserResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
       x-codegen-request-body-name: body
@@ -76,14 +76,14 @@ paths:
       description: Login for existing user
       operationId: Login
       requestBody:
-        $ref: '#/components/requestBodies/LoginUserRequest'
+        $ref: "#/components/requestBodies/LoginUserRequest"
       responses:
-        '200':
-          $ref: '#/components/responses/UserResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/UserResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       x-codegen-request-body-name: body
   /profiles/{username}:
     get:
@@ -100,12 +100,12 @@ paths:
           schema:
             type: string
       responses:
-        '200':
-          $ref: '#/components/responses/ProfileResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/ProfileResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
   /profiles/{username}/follow:
     post:
       tags:
@@ -121,12 +121,12 @@ paths:
           schema:
             type: string
       responses:
-        '200':
-          $ref: '#/components/responses/ProfileResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/ProfileResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
     delete:
@@ -143,12 +143,12 @@ paths:
           schema:
             type: string
       responses:
-        '200':
-          $ref: '#/components/responses/ProfileResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/ProfileResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
   /articles/feed:
@@ -156,19 +156,20 @@ paths:
       tags:
         - Articles
       summary: Get recent articles from users you follow
-      description: Get most recent articles from users you follow. Use query parameters
+      description:
+        Get most recent articles from users you follow. Use query parameters
         to limit. Auth is required
       operationId: GetArticlesFeed
       parameters:
-        - $ref: '#/components/parameters/offsetParam'
-        - $ref: '#/components/parameters/limitParam'
+        - $ref: "#/components/parameters/offsetParam"
+        - $ref: "#/components/parameters/limitParam"
       responses:
-        '200':
-          $ref: '#/components/responses/MultipleArticlesResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/MultipleArticlesResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
   /articles:
@@ -176,7 +177,8 @@ paths:
       tags:
         - Articles
       summary: Get recent articles globally
-      description: Get most recent articles globally. Use query parameters to filter
+      description:
+        Get most recent articles globally. Use query parameters to filter
         results. Auth is optional
       operationId: GetArticles
       parameters:
@@ -195,15 +197,15 @@ paths:
           description: Filter by favorites of a user (username)
           schema:
             type: string
-        - $ref: '#/components/parameters/offsetParam'
-        - $ref: '#/components/parameters/limitParam'
+        - $ref: "#/components/parameters/offsetParam"
+        - $ref: "#/components/parameters/limitParam"
       responses:
-        '200':
-          $ref: '#/components/responses/MultipleArticlesResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/MultipleArticlesResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
     post:
       tags:
         - Articles
@@ -211,14 +213,14 @@ paths:
       description: Create an article. Auth is required
       operationId: CreateArticle
       requestBody:
-        $ref: '#/components/requestBodies/NewArticleRequest'
+        $ref: "#/components/requestBodies/NewArticleRequest"
       responses:
-        '201':
-          $ref: '#/components/responses/SingleArticleResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "201":
+          $ref: "#/components/responses/SingleArticleResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
       x-codegen-request-body-name: article
@@ -237,10 +239,10 @@ paths:
           schema:
             type: string
       responses:
-        '200':
-          $ref: '#/components/responses/SingleArticleResponse'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/SingleArticleResponse"
+        "422":
+          $ref: "#/components/responses/GenericError"
     put:
       tags:
         - Articles
@@ -255,14 +257,14 @@ paths:
           schema:
             type: string
       requestBody:
-        $ref: '#/components/requestBodies/UpdateArticleRequest'
+        $ref: "#/components/requestBodies/UpdateArticleRequest"
       responses:
-        '200':
-          $ref: '#/components/responses/SingleArticleResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/SingleArticleResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
       x-codegen-request-body-name: article
@@ -280,12 +282,12 @@ paths:
           schema:
             type: string
       responses:
-        '200':
-          $ref: '#/components/responses/EmptyOkResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/EmptyOkResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
   /articles/{slug}/comments:
@@ -303,12 +305,12 @@ paths:
           schema:
             type: string
       responses:
-        '200':
-          $ref: '#/components/responses/MultipleCommentsResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/MultipleCommentsResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
     post:
       tags:
         - Comments
@@ -323,14 +325,14 @@ paths:
           schema:
             type: string
       requestBody:
-        $ref: '#/components/requestBodies/NewCommentRequest'
+        $ref: "#/components/requestBodies/NewCommentRequest"
       responses:
-        '200':
-          $ref: '#/components/responses/SingleCommentResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/SingleCommentResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
       x-codegen-request-body-name: comment
@@ -355,12 +357,12 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
-          $ref: '#/components/responses/EmptyOkResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/EmptyOkResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
   /articles/{slug}/favorite:
@@ -378,12 +380,12 @@ paths:
           schema:
             type: string
       responses:
-        '200':
-          $ref: '#/components/responses/SingleArticleResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/SingleArticleResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
     delete:
@@ -400,12 +402,12 @@ paths:
           schema:
             type: string
       responses:
-        '200':
-          $ref: '#/components/responses/SingleArticleResponse'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/SingleArticleResponse"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "422":
+          $ref: "#/components/responses/GenericError"
       security:
         - Token: []
   /tags:
@@ -416,10 +418,10 @@ paths:
       description: Get tags. Auth not required
       operationId: GetTags
       responses:
-        '200':
-          $ref: '#/components/responses/TagsResponse'
-        '422':
-          $ref: '#/components/responses/GenericError'
+        "200":
+          $ref: "#/components/responses/TagsResponse"
+        "422":
+          $ref: "#/components/responses/GenericError"
 components:
   schemas:
     LoginUser:
@@ -532,7 +534,7 @@ components:
         favoritesCount:
           type: integer
         author:
-          $ref: '#/components/schemas/Profile'
+          $ref: "#/components/schemas/Profile"
     NewArticle:
       required:
         - body
@@ -579,7 +581,7 @@ components:
         body:
           type: string
         author:
-          $ref: '#/components/schemas/Profile'
+          $ref: "#/components/schemas/Profile"
     NewComment:
       required:
         - body
@@ -625,7 +627,7 @@ components:
             type: object
             properties:
               comment:
-                $ref: '#/components/schemas/Comment'
+                $ref: "#/components/schemas/Comment"
     MultipleCommentsResponse:
       description: Multiple comments
       content:
@@ -638,7 +640,7 @@ components:
               comments:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Comment'
+                  $ref: "#/components/schemas/Comment"
     SingleArticleResponse:
       description: Single article
       content:
@@ -649,7 +651,7 @@ components:
             type: object
             properties:
               article:
-                $ref: '#/components/schemas/Article'
+                $ref: "#/components/schemas/Article"
     MultipleArticlesResponse:
       description: Multiple articles
       content:
@@ -663,7 +665,7 @@ components:
               articles:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Article'
+                  $ref: "#/components/schemas/Article"
               articlesCount:
                 type: integer
     ProfileResponse:
@@ -676,7 +678,7 @@ components:
             type: object
             properties:
               profile:
-                $ref: '#/components/schemas/Profile'
+                $ref: "#/components/schemas/Profile"
     UserResponse:
       description: User
       content:
@@ -687,7 +689,7 @@ components:
             type: object
             properties:
               user:
-                $ref: '#/components/schemas/User'
+                $ref: "#/components/schemas/User"
     EmptyOkResponse:
       description: No content
       content: {}
@@ -699,7 +701,7 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/GenericErrorModel'
+            $ref: "#/components/schemas/GenericErrorModel"
   requestBodies:
     LoginUserRequest:
       required: true
@@ -712,7 +714,7 @@ components:
             type: object
             properties:
               user:
-                $ref: '#/components/schemas/LoginUser'
+                $ref: "#/components/schemas/LoginUser"
     NewUserRequest:
       required: true
       description: Details of the new user to register
@@ -724,7 +726,7 @@ components:
             type: object
             properties:
               user:
-                $ref: '#/components/schemas/NewUser'
+                $ref: "#/components/schemas/NewUser"
     UpdateUserRequest:
       required: true
       description: User details to update. At least **one** field is required.
@@ -736,7 +738,7 @@ components:
             type: object
             properties:
               user:
-                $ref: '#/components/schemas/UpdateUser'
+                $ref: "#/components/schemas/UpdateUser"
     NewArticleRequest:
       required: true
       description: Article to create
@@ -748,7 +750,7 @@ components:
             type: object
             properties:
               article:
-                $ref: '#/components/schemas/NewArticle'
+                $ref: "#/components/schemas/NewArticle"
     UpdateArticleRequest:
       required: true
       description: Article to update
@@ -760,7 +762,7 @@ components:
             type: object
             properties:
               article:
-                $ref: '#/components/schemas/UpdateArticle'
+                $ref: "#/components/schemas/UpdateArticle"
     NewCommentRequest:
       required: true
       description: Comment you want to create
@@ -772,7 +774,7 @@ components:
             type: object
             properties:
               comment:
-                $ref: '#/components/schemas/NewComment'
+                $ref: "#/components/schemas/NewComment"
   parameters:
     offsetParam:
       in: query
@@ -794,11 +796,12 @@ components:
   securitySchemes:
     Token:
       type: apiKey
-      description: "For accessing the protected API resources, you must have received >
-          a valid JWT token after registering or logging in. This JWT token must
-         then be used for all protected resources by passing it in via the 'Authorization'
-         header. A JWT token is generated by the API by either registering via
-         /users or logging in via /users/login.The following format must be in
-         the 'Authorization' header :    Token xxxxxx.yyyyyyy.zzzzzz"
+      description:
+        "For accessing the protected API resources, you must have received >
+        a valid JWT token after registering or logging in. This JWT token must
+        then be used for all protected resources by passing it in via the 'Authorization'
+        header. A JWT token is generated by the API by either registering via
+        /users or logging in via /users/login.The following format must be in
+        the 'Authorization' header :    Token xxxxxx.yyyyyyy.zzzzzz"
       name: Authorization
       in: header
